Suma de los primeros 10 números naturales

--- a/for.html
+++ b/for.html
@@ -12,11 +12,14 @@
     <h1>Practicas de ejercicios con for</h1>
 
     <script>
-        //Imprimir números del 1 al 10
+        //Suma de los primeros 10 números naturales
+
+        let suma = 0;
 
         for (let i = 1; i <= 10; i++) {
-            console.log(i);
+            suma += i;
         }
+        console.log("La suma de los primeros 10 números naturales es: " + suma);
     </script>
 
 </body>
