Tablas de multiplicar

--- a/for.html
+++ b/for.html
@@ -12,14 +12,12 @@
     <h1>Practicas de ejercicios con for</h1>
 
     <script>
-        //Suma de los primeros 10 números naturales
+        // Tablas de multiplicar
 
-        let suma = 0;
-
+        let numero = 3;
         for (let i = 1; i <= 10; i++) {
-            suma += i;
+            console.log(`${numero} x ${i} = ${numero * i}`);
         }
-        console.log("La suma de los primeros 10 números naturales es: " + suma);
     </script>
 
 </body>
