--- a/for.html
+++ b/for.html
@@ -12,15 +12,13 @@
     <h1>Practicas de ejercicios con for</h1>
 
     <script>
-        // Factorial de un número
+        // Números pares del 1 al 20
 
-        let n = 10;
-        let factorial = 1;
-
-        for (let i = 1; i <= n; i++) {
-            factorial *= i;
+        for (let i = 1; i <= 20; i++) {
+            if (i % 2 === 0) {
+                console.log(i);
+            }
         }
-        console.log(`El factorial de ${n} es: ${factorial}`);
     </script>
 
 </body>
