Multiplos de 7 entre 1 y 100

--- a/while.html
+++ b/while.html
@@ -16,13 +16,14 @@
         //     // Bloque de código a ejecutar
         // }
 
-        //   Ejercicio: Imprimir números del 1 al 5 usando while
+        //   Ejercicio: Usar while para encontrar múltiplos de 7
 
-        let numero = 1;
-
-        while (numero <= 5) {
-            console.log(numero + " ");
-            numero++;
+        let i = 1;
+        while (i <= 100) {
+            if (i % 7 === 0) {
+                console.log(i);
+            }
+            i++;
         }
     </script>
 
