--- a/while.html
+++ b/while.html
@@ -16,18 +16,16 @@
         //     // Bloque de código a ejecutar
         // }
 
-        //   Ejercicio: Usar while para encontrar el factorial de un número
+        // Usar while para sumar hasta que el total sea mayor a 50
 
-        let numero = 5;
-        let factorial = 1;
+        let total = 0;
         let i = 1;
 
-        while (i <= numero) {
-            factorial *= i;
+        while (total <= 50) {
+            total += i;
             i++;
-
         }
-        console.log("El factorial de: " + numero + " es " + factorial);
+        console.log("El total es " + total + " alcanzado con i = " + (i - 1));
     </script>
 
 </body>
