--- a/while.html
+++ b/while.html
@@ -16,16 +16,14 @@
         //     // Bloque de código a ejecutar
         // }
 
-        // Usar while para sumar hasta que el total sea mayor a 50
+        //  Usar while para contar hacia atrás
 
-        let total = 0;
-        let i = 1;
+        let i = 10;
 
-        while (total <= 50) {
-            total += i;
-            i++;
+        while (i >= 1) {
+            console.log(i);
+            i--;
         }
-        console.log("El total es " + total + " alcanzado con i = " + (i - 1));
     </script>
 
 </body>
