--- a/while.html
+++ b/while.html
@@ -16,14 +16,16 @@
         //     // Bloque de código a ejecutar
         // }
 
-        //  Usar while para contar hacia atrás
+        //   Sumar números hasta 20
 
-        let i = 10;
+        let suma = 0;
+        let numero = 1
 
-        while (i >= 1) {
-            console.log(i);
-            i--;
+        while (suma < 20) {
+            suma += numero
+            numero++
         }
+        console.log("Suma total:", suma);
     </script>
 
 </body>
