Numeros pares desde el 2 hasta el 10

--- a/while.html
+++ b/while.html
@@ -16,16 +16,14 @@
         //     // Bloque de código a ejecutar
         // }
 
-        //   Sumar números hasta 20
+        //   Imprimir números pares del 2 hasta 10
 
-        let suma = 0;
-        let numero = 1
+        let numero = 2;
 
-        while (suma < 20) {
-            suma += numero
-            numero++
+        while (numero <= 10) {
+            console.log(numero)
+            numero += 2;
         }
-        console.log("Suma total:", suma);
     </script>
 
 </body>
